# proggy

./: .gitignore  README  README.md  T-shirt.c  _config.yml  hello.md  index.md  languages.md
ApplesoftBASIC/: scrnfill.bas
Objective-C/: hello.m  whoami.m
_layouts/: default.html
batch/: datetimestamp.bat
c/: HarvardCS50.c  Precision.c  T-shirt.c  TrianglesToPi.c  TrianglesToPiLongDouble.c  argybargy.c  centigrade_to_fahrenheit.c  centrigrade_to_fahrenheit.c  count_to_10.c  count_to_10_goto.c  dates_and_locales.c  epoch.c  epochBeginningAndEndOfTime.c  factorial.c  fahrenheit_celsius.c  functionFirst.c  goto.c  hello.c  loop.c  printargs.c  shellcode.c  shifty.c  shortestHello.c  sizeof.c  stdout_stderr.c  tshirt.c  upper_lower.c  привет.c  こんいちわ.c
c++/: hello.C  hello.cc  一.cc
coffeescript/: args.coffee  fib.coffee  hello.coffee
css/: default.css
fortran/: centigrade_to_fahrenheit.for  (+2 more)
python/: 3x3.py  Arabic.py  ArabicNumbers.py  BankNotes.py  BeautifulSCCL.py  Bengali.py  BoPoMoFo.py  BuenosAiresLosAngelesTokyoKarachi.py  ChicagoLosAngelesTokyoCalcutta.py  ChineseNumbers.py  Devanagari.py  FileSetOperations.py  GreekAndCoptic.py  Gurmukhi.py  HalfWidthKana.py  Hebrew.py  HelloBeautifulSoup.py  Hiragana.py  Kali.py  Katakana.py  MiddleFinger.py  NFCvsNFD.py  NetGear614GetUptime.py  NetGear614GetUptimeWithMechanize.py  NetGear614RadioController.py  NetGear614Walker.py  Paragraphs2Lines.py  PileOfPoo.py  Pipfile  RightToLeft.py  RomanSongs.py  Russian.py  Sinhala.py  Split14days.py  Suzuki.py  TalkingThatForeign.py  Tamil.py  Telugu.py  Tengu.py  Twitty.py  (+165 more)
(+168 files in other folders)
